--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 } */
 
 body {
-  background-color: white;
+  background-color: green;
   /* overflow-x: hidden; */
   /* padding: 0px 10px; */
   width: auto;
